Fixed tooltip displaying offscreen

--- a/styles/style.css
+++ b/styles/style.css
@@ -478,7 +478,7 @@ hr {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, minmax(75px, 1fr)); 
-  grid-template-rows: repeat(33, 70px); 
+  grid-template-rows: repeat(auto, 70px); 
   grid-auto-flow: dense;
   grid-gap: 20px;
   margin: 0 1rem;
@@ -579,6 +579,17 @@ hr {
   flex: 1 0 auto;
   color: #fff;
 }
+
+/* Featured Franchises */
+
+.featured-container {
+  display: flex;
+
+}
+
+
+
+
 
 /* Animation */
 
